Comprehensive README update with quick start guide